# dotfm

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Host your Django project on DigitalOcean using dokku.md  Makefile  README.md  build.js  captain-definition-scheduler  captain-definition-worker  gunicorn.conf.py  htmx-web-types.json  manage.py  package.json  pyproject.toml  runserver.sh  runworker.sh  scheduler.Dockerfile  supervisord.conf  tailwind.config.js
assets/: index.js  styles.css
config/: procrastinate.py  settings.py  urls.py
content/: index.md  template.md
content/blog/: host-django-project-on-digital-ocean-using-dokku.md  index.md
content/posts/: bootstraping-a-production-ready-django-project.md  fuzzy_couscous_the_cli_for_a_better_django_development_experience.md  host.md  htmx-support-in-pycharm.md  index.md
content/posts/2022/: Testing out obsidian git publisher.md  bootstrap-your-django-projects.md  bootstraping-a-new-django-project.md  bootstraping-a-production-ready-django-project.md  bundle.md  django-deploy-using-dokku.md  django-esbuild-setup.md  django-htmx-patterns.md  host-your-django-project-on-digital-ocean-with-dokku.md  pycharm-htmx-web-types.md
content/snippets/: easy-database-and-migrations-reset-during-development.md  index.md
content/snippets/2022/: Delete all django migrations.md  Delete-all-django-migrations.md  easy-database-and-migrations-reset-during-development.md  htmx-django-widgets-tweaks.md
docker/: entrypoint.sh
dotfm/: settings.py  urls.py
dotfm/blog/: admin.py  apps.py  channels.py  context_processors.py  feed.py  listeners.py  models.py  tasks.py  urls.py  views.py
dotfm/blog/content/: django-deploy-using-dokku.md
dotfm/blog/content/posts/: pycharm-htmx-web-types.md
dotfm/blog/management/commands/: makeauthor.py
dotfm/blog/migrations/: 0001_initial.py  0002_post_content_changed.py  0002_remove_post_auto_publishing_date_remove_post_content_and_more.py  0003_author_remove_post_overview.py
dotfm/blog/templatetags/: blog_tags.py
dotfm/core/: apps.py  views.py
dotfm/core/management/commands/: makesuperuser.py  rocketry_app.py
dotfm/newsletter/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
dotfm/newsletter/migrations/: 0001_initial.py
dotfm/portfolio/: admin.py  apps.py  models.py  views.py
dotfm/portfolio/migrations/: 0001_initial.py
dotfm/projects/: admin.py  apps.py  models.py  views.py
dotfm/projects/migrations/: 0001_initial.py  0002_alter_project_options_project_active.py
dotfm/static/: bundle.css  bundle.css.map  bundle.js  bundle.js.map  index.css  index.css.map  index.js  index.js.map
dotfm/static/css/: input.css  output.css
dotfm/static/js/: htmx.min.js
dotfm/templates/: base.html  blog.html  colophon.html  home.html  projects.html
dotfm/templates/blog/: _comments.html  base.html  index.html  snippets.html
dotfm/templates/coltrane/: base.html  content.html
dotfm/templates/newsletter/: confirm_subscription.html
dotfm/templates/newsletter/emails/: confirmation.html  monthly_posts_recap.html  welcome.html
dotfm/templates/projects/: index.html
dotfm/theme/: apps.py
dotfm/theme/static_src/: package-lock.json  package.json
templates/: base.html  home.html
templates/core/: home.html
