[tool.poetry]
name = "dotfm"
version = "0.1.0"
description = "Personal website"
authors = ["Tobi DEGNON <tobidegnon@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
gunicorn = "^20.1.0"
psycopg2 = "2.9.5"
django-fbv = "^0.5.1"
django-environ = "^0.9.0"
django-htmx = "^1.12.2"
whitenoise = "^6.2.0"
django-model-utils = "^4.2.0"
django-extensions = "^3.2.1"
coltrane = "^0.19.0"
Pygments = "^2.13.0"
django-alive = "^1.2.1"
sentry-sdk = "^1.10.1"
django-pgclone = "^2.3.3"

[tool.poetry.group.dev.dependencies]
werkzeug = "^2.2.2"
django-browser-reload = "^1.6.0"
mypy = "^0.982"
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.2.0"
poetryup = "^0.12.3"
pywatchman = "^1.4.1"
django-stubs = "^1.12.0"
pylint-django = "^2.5.3"
pre-commit = "^2.20.0"
ipython = "^8.5.0"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
