[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dotfm"
version = "0.1.0"
description = ""
authors = [
    "Tobi DEGNON <tobidegnon@proton.me>",
]
license = ""
readme = "README.md"
packages = [
    { include = "dotfm" },
]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.4.0"
Pygments = "^2.14.0"
argon2-cffi = "^21.3.0"
pytailwindcss = "^0.1.4"
Django = "^4.1.5"
django-environ = "^0.9.0"
django-model-utils = "^4.3.1"
django-extensions = "^3.2.1"
django-pgclone = "^2.3.3"
django-alive = "^1.2.1"
django-htmx = "^1.13.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"
sentry-sdk = "^1.12.1"
rocketry = "^2.5.1"
coltrane = {extras = ["mistune"], version = "^0.22.0"}
hiredis = "^2.1.0"
redis = "^4.4.0"

[tool.poetry.dependencies.django-anymail]
extras = [
    "amazon_ses",
]
version = "^8.6"

[tool.poetry.dependencies.whitenoise]
extras = [
    "brotli",
]
version = "^6.3.0"

[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.6.0"
django-debug-toolbar = "^3.8.1"
django-fastdev = "^1.7.3"
ipython = "^8.8.0"
coverage = "^6.5.0"
pytest = "^7.2.0"
pytest-django = "^4.5.2"
pytest-sugar = "^0.9.6"
pre-commit = "^2.21.0"
pylint-django = "^2.5.3"
bandit = "^1.7.4"
poethepoet = "^0.16.5"

[tool.poetry.group.dev.dependencies.Werkzeug]
extras = [
    "watchdog",
]
version = "^2.2.2"

[tool.poe.tasks]
RD = [
    "rd",
    "rm",
    "mk",
    "m",
]

[tool.poe.tasks.r]
cmd = "python manage.py runserver"
help = "Start dev serve"

[tool.poe.tasks.u]
cmd = "python manage.py makesuperuser"
help = "Create a new superuser using environment varibales, look in your .env.template file"

[tool.poe.tasks.m]
cmd = "python manage.py migrate"
help = "Apply migrations"

[tool.poe.tasks.mk]
cmd = "python manage.py makemigrations"
help = "Make migrations"

[tool.poe.tasks.rd]
cmd = "python manage.py reset_db --noinput"
help = "Delete and recreate your database"

[tool.poe.tasks.t]
cmd = "tailwindcss -i dotfm/static/css/input.css -o dotfm/static/css/output.css --watch"
help = "Compile tailwind in watch mode"

[tool.poe.tasks.rm]
cmd = "cuzzy rm-migrations dotfm"
help = "Delete all migrations files"

[tool.cuzzy]
work = [
    "poe r",
    "poe t",
]

[tool.ruff]
line-length = 120
select = [
    "E",
    "F",
    "U",
    "N",
    "S",
    "C",
    "B",
    "T",
]
extend-exclude = [
    "*/migrations/*",
]

[tool.djlint]
profile = "django"
max_line_length = 120
format_attribute_template_tags = true
ignore = "H017"

[tool.pylint.MASTER]
load-plugins = "pylint_django"
django-settings-module = "config.settings"
ignore-paths = ".*/migrations"

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "invalid-name",
]

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint.TYPECHECK]
generated-members = [
    "REQUEST",
    "acl_users",
    "aq_parent",
    "[a-zA-Z]+_set{1,2}",
    "save",
    "delete",
]
